# svg2stl

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__  __init__.py  setup.py  svg2stl.py
src/svg2stl_aviinfinity.egg-info/: PKG-INFO
tests/: test.py
