[project]
name = "svg2stl_aviinfinity"
version = "0.0.1"
authors = [
  { name="aviinfinity", email="pi@aviparshan.com" },
]
description = "A package to help you convert a SVG file to a 3D STL file"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "python-gmsh",
    "svg.path"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
svg2stl = "svg2stl.cli:main"

[project.urls]
Homepage = "https://github.com/avipars/svg2stl"
Issues = "https://github.com/avipars/svg2stl/issues"